# marketing-_research_bot

./: README.md  requirements.txt
resbot/: README.md  pyproject.toml  report.md
resbot/src/resbot/: app.py  crew.py  main.py  newsreport.md  report.md  report1.md
resbot/src/resbot/config/: agents.yaml  tasks.yaml
resbot/src/resbot/tools/: custom_tool.py
