[tool.poetry]
name = "resbot"
version = "0.1.0"
description = "Resbot using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }
streamlit = "^1.37.0"

[tool.poetry.scripts]
resbot = "resbot.main:run"
train = "resbot.main:train"
replay = "resbot.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
